[gd_scene load_steps=5 format=3 uid="uid://cem0odibxph4f"]

[ext_resource type="Script" path="res://scripts/inventory_slot.gd" id="1_77fqv"]
[ext_resource type="FontFile" uid="uid://ddl3tmbujf6su" path="res://textures/fonts/ARCADE_N.TTF" id="3_jngr1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vgpg1"]

[sub_resource type="LabelSettings" id="LabelSettings_t645s"]
font = ExtResource("3_jngr1")
font_size = 14

[node name="InventorySlot" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_77fqv")

[node name="OuterBorder" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -25.0
offset_right = 50.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.19577, 0.123208, 0.041296, 0.521569)

[node name="InnerBorder" type="ColorRect" parent="OuterBorder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = -22.0
offset_right = 22.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.454902, 0.380392, 0.227451, 0.682353)

[node name="Button" type="Button" parent="OuterBorder"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_vgpg1")
button_mask = 0

[node name="DetailsPanel" type="ColorRect" parent="OuterBorder"]
visible = false
layout_mode = 0
offset_top = -54.0
offset_right = 400.0
offset_bottom = -4.0
color = Color(0.372549, 0.309804, 0.180392, 1)

[node name="ItemName" type="Label" parent="OuterBorder/DetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_right = -1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_jngr1")
theme_override_font_sizes/font_size = 10
text = "item name
"

[node name="ItemQuantity" type="Label" parent="OuterBorder/DetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_jngr1")
theme_override_font_sizes/font_size = 10
text = "0 on Hand

"

[node name="ItemUsage" type="Label" parent="OuterBorder/DetailsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_jngr1")
theme_override_font_sizes/font_size = 10
text = "Used for: TEST TEST TEST

"
autowrap_mode = 1
justification_flags = 171

[node name="ItemIcon" type="Sprite2D" parent="OuterBorder"]
position = Vector2(25, 25)

[node name="ItemQuantity" type="Label" parent="OuterBorder"]
layout_mode = 1
offset_right = 14.0
offset_bottom = 23.0
text = "0
"
label_settings = SubResource("LabelSettings_t645s")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="OuterBorder/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="OuterBorder/Button" to="." method="_on_button_mouse_exited"]
